# simulador-stack8086

./: .gitignore  CMakeLists.txt  LICENSE  README.md  emuASM.sln  logo.pdn
UI/: emuASM.glade
emuASM/: CPUdefs.h  CPUmem.cpp  CPUutils.cpp  Terminal.cpp  emuASM.vcxproj  emuASM.vcxproj.filters  eventos_ventanaRegistros.cpp  physicalAddress.cpp  source.cpp  terminal.h  ventanaRegistros.cpp
source/: CMakeLists.txt  Screen01.ui.qml  main.qml  qml.qrc  qtest.qml
source/include/: CPU.h  CPUbase.h  CPUmem.h  CPUutils.h  UI.h  ventanaMemoria.h  ventanaRegistros.h
source/src/: CPUmem.cpp  CPUoperations.cpp  CPUutils.cpp  UI Loader.cpp  UI_Loader.cpp  cpuOperators.cpp  eventos_ventanaMemoria.cpp  eventos_ventanaRegistros.cpp  physicalAddress.cpp  source.cpp  ventanaMemoria.cpp  ventanaRegistros.cpp
